--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   image_picker: ^0.8.6
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.3
+  flutterfire_ui: ^0.4.3+20
 
 dev_dependencies:
   flutter_test:
