--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.3
   flutterfire_ui: ^0.4.3+20
+  cloud_firestore: ^4.3.0
+  provider: ^6.0.5
+  firebase_ui_auth: ^1.1.5
 
 dev_dependencies:
   flutter_test:
