--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.3.0
   provider: ^6.0.5
   firebase_ui_auth: ^1.1.5
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
