--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   provider: ^6.0.5
   firebase_ui_auth: ^1.1.5
   url_launcher: ^6.1.7
+  flutter_barcode_scanner: ^2.0.0
+  qr_flutter: ^4.0.0
+  qrscan: ^0.3.3
 
 dev_dependencies:
   flutter_test:
